syntax = "proto3";

// build *.pb.go from project root
// protoc -I. --go_out=plugins=grpc,paths=source_relative:. api/proto/common/*.proto

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dc-lab/sky/api/proto";

message TaskFile {
    string path = 1;
    int64 size = 2;
    string hash = 3;
    google.protobuf.Timestamp creation_time = 4;
    google.protobuf.Timestamp modification_time = 5;
}
